<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
    		android:id="@+id/server"
            android:key="server"
            android:defaultValue="@string/default_server"
            android:title="@string/server"
            android:dialogTitle="@string/change_server" />
            
    <EditTextPreference
        android:id="@+id/username"
            android:key="username"
            android:defaultValue=""
            android:title="@string/username"
            android:dialogTitle="@string/change_user" />
            
    <EditTextPreference
        android:id="@+id/location"
            android:key="location"
            android:defaultValue=""
            android:title="@string/location"
            android:dialogTitle="@string/change_location" />        
                
</PreferenceScreen>